[package]
name = "rust-scarpy"
version = "0.1.0"
edition = "2021"

[dependencies]
thirtyfour = "0.31.0"
tokio = "1.26.0"

reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0" 
hmac = "0.12"
sha2 = "0.10"
base64 = "0.12"
urlencoding = "2.1"  # 添加 urlencoding 依赖
 
md5 = "0.7"